Fix responsiveness on mobile for cards, paragraphs, butons on index.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,7 @@ body {
 .card {
     border-radius: 0;
     font-size: large;
-    min-height: 290px;
+    min-height: 310px;
 }
 
 .icons-index {
@@ -41,13 +41,15 @@ footer {
 }
 
 footer li {
-    display: inline-flex;
+    display: inline;
+    margin: 25px;
 }
 
 footer li a i {
-    width: 40px;
-    height: 40px;
     font-size: 25px;
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
     color: black;
     line-height: 40px;
     border-radius: 50%;
@@ -341,5 +343,15 @@ input[name='q']::placeholder {
     .buy-button {
         font-size: small;
         min-width: 170px;
+    }
+}
+
+@media only screen and (max-width: 1366px) and (min-width: 1024px) {
+    .card {
+        font-size: small;
+    }
+    
+    .jumbotron {
+        font-size: large;
     }
 }
